Archive2/34/8afad18cc90b0a/output
main.cpp:6:24: error: no template named 'common_type_t' in namespace 'std'; did you mean 'common_type'?
    -> std::array<std::common_type_t<Ts...>,sizeof...(ts)>
                  ~~~~~^~~~~~~~~~~~~
                       common_type
/usr/include/c++/v1/type_traits:1454:32: note: 'common_type' declared here
template <class ..._Tp> struct common_type;
                               ^
main.cpp:8:14: error: initializer for aggregate with no elements requires explicit braces
    return { std::forward<Ts>(ts)... };
             ^
main.cpp:13:14: note: in instantiation of function template specialization 'make_array<int, int, int>' requested here
    auto b = make_array(1, 2, 3);
             ^
main.cpp:8:14: error: initializer for aggregate with no elements requires explicit braces
    return { std::forward<Ts>(ts)... };
             ^
main.cpp:8:14: error: initializer for aggregate with no elements requires explicit braces
main.cpp:8:14: warning: suggest braces around initialization of subobject [-Wmissing-braces]
    return { std::forward<Ts>(ts)... };
             ^~~~~~~~~~~~~~~~~~~~
             {                   }
main.cpp:16:19: error: invalid operands to binary expression ('ostream' (aka 'basic_ostream<char>') and 'std::__1::common_type<int, int, int>')
        std::cout << i << ' ';
        ~~~~~~~~~ ^  ~
/usr/include/c++/v1/ostream:195:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const void *' for 1st argument; take the address of the argument with &
    basic_ostream& operator<<(const void* __p);
                   ^
/usr/include/c++/v1/ostream:179:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'std::__1::basic_ostream<char, std::__1::char_traits<char> > &(*)(std::__1::basic_ostream<char, std::__1::char_traits<char> > &)' for 1st argument
    basic_ostream& operator<<(basic_ostream& (*__pf)(basic_ostream&));
                   ^
/usr/include/c++/v1/ostream:180:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'basic_ios<char_type, traits_type> &(*)(basic_ios<char_type, traits_type> &)' for 1st argument
    basic_ostream& operator<<(basic_ios<char_type, traits_type>&
                   ^
/usr/include/c++/v1/ostream:182:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'std::__1::ios_base &(*)(std::__1::ios_base &)' for 1st argument
    basic_ostream& operator<<(ios_base& (*__pf)(ios_base&));
                   ^
/usr/include/c++/v1/ostream:183:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'bool' for 1st argument
    basic_ostream& operator<<(bool __n);
                   ^
/usr/include/c++/v1/ostream:184:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'short' for 1st argument
    basic_ostream& operator<<(short __n);
                   ^
/usr/include/c++/v1/ostream:185:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'unsigned short' for 1st argument
    basic_ostream& operator<<(unsigned short __n);
                   ^
/usr/include/c++/v1/ostream:186:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'int' for 1st argument
    basic_ostream& operator<<(int __n);
                   ^
/usr/include/c++/v1/ostream:187:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'unsigned int' for 1st argument
    basic_ostream& operator<<(unsigned int __n);
                   ^
/usr/include/c++/v1/ostream:188:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'long' for 1st argument
    basic_ostream& operator<<(long __n);
                   ^
/usr/include/c++/v1/ostream:189:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'unsigned long' for 1st argument
    basic_ostream& operator<<(unsigned long __n);
                   ^
/usr/include/c++/v1/ostream:190:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'long long' for 1st argument
    basic_ostream& operator<<(long long __n);
                   ^
/usr/include/c++/v1/ostream:191:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'unsigned long long' for 1st argument
    basic_ostream& operator<<(unsigned long long __n);
                   ^
/usr/include/c++/v1/ostream:192:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'float' for 1st argument
    basic_ostream& operator<<(float __f);
                   ^
/usr/include/c++/v1/ostream:193:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'double' for 1st argument
    basic_ostream& operator<<(double __f);
                   ^
/usr/include/c++/v1/ostream:194:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'long double' for 1st argument
    basic_ostream& operator<<(long double __f);
                   ^
/usr/include/c++/v1/ostream:196:20: note: candidate function not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'basic_streambuf<char_type, traits_type> *' for 1st argument
    basic_ostream& operator<<(basic_streambuf<char_type, traits_type>* __sb);
                   ^
/usr/include/c++/v1/ostream:773:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'char' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, char __cn)
^
/usr/include/c++/v1/ostream:806:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, char __c)
^
/usr/include/c++/v1/ostream:813:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'signed char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, signed char __c)
^
/usr/include/c++/v1/ostream:820:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'unsigned char' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, unsigned char __c)
^
/usr/include/c++/v1/ostream:834:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const char *' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const char* __strn)
^
/usr/include/c++/v1/ostream:880:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const char* __str)
^
/usr/include/c++/v1/ostream:887:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const signed char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const signed char* __str)
^
/usr/include/c++/v1/ostream:895:1: note: candidate function [with _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const unsigned char *' for 2nd argument
operator<<(basic_ostream<char, _Traits>& __os, const unsigned char* __str)
^
/usr/include/c++/v1/ostream:1074:1: note: candidate function [with _CharT = char, _Traits = std::__1::char_traits<char>] not viable: no known conversion from 'std::__1::common_type<int, int, int>' to 'const std::__1::error_code' for 2nd argument
operator<<(basic_ostream<_CharT, _Traits>& __os, const error_code& __ec)
^
/usr/include/c++/v1/ostream:766:1: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'std::__1::common_type<int, int, int>')
operator<<(basic_ostream<_CharT, _Traits>& __os, _CharT __c)
^
/usr/include/c++/v1/ostream:827:1: note: candidate template ignored: could not match 'const _CharT *' against 'std::__1::common_type<int, int, int>'
operator<<(basic_ostream<_CharT, _Traits>& __os, const _CharT* __str)
^
/usr/include/c++/v1/ostream:1065:1: note: candidate template ignored: could not match 'basic_string' against 'common_type'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
/usr/include/c++/v1/ostream:1082:1: note: candidate template ignored: could not match 'shared_ptr' against 'common_type'
operator<<(basic_ostream<_CharT, _Traits>& __os, shared_ptr<_Yp> const& __p)
^
/usr/include/c++/v1/ostream:1051:5: note: candidate template ignored: disabled by 'enable_if' [with _Stream = std::__1::basic_ostream<char, std::__1::char_traits<char> > &, _Tp = std::__1::common_type<int, int, int>]
    !is_lvalue_reference<_Stream>::value &&
    ^
/usr/include/c++/v1/ostream:1089:1: note: candidate template ignored: could not match 'bitset' against 'common_type'
operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Size>& __x)
^
1 warning and 5 errors generated.
